service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sim-service
  namespace: sim-backend2
spec:
  ports:
    - port: 443
      targetPort: 8080
      protocol: TCP
      name: https
  type: NodePort
  selector:
    app: sim
